Replace old HTML structure with updated version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>cydOS - No Button Flasher</title>
+    <title>eclipse flasher</title>
     <script type="module" src="https://unpkg.com/esp-web-tools@9/dist/web/install-button.js?module"></script>
     <style>
         body {
@@ -114,4 +114,5 @@
     </script>
 </body>
 </html>
+
 
